@@ -1,0 +1,3 @@
+struct S; declare S as int
+         ^
+10: error: "S": previously declared as type: typedef struct S S
