@@ -1,0 +1,1 @@
+cdecl @ @ @ struct S; declare S as int @ 65
