@@ -16,6 +16,13 @@ with their complete changes, see the AUTHORS file.
 Now printing types in error messages as they were originally defined (pseudo-
 English vs. gibberish) in more cases.
 
+** Types as objects, English edition
+Previously declared types in pseudo-Engilsh are now checked to ensure they're
+not being used as objects:
+
+    cdecl> struct S
+    cdecl> declare S as int             // error (now)
+
 
 * Changes in Cdecl 11.15
 
@@ -47,7 +54,7 @@ Alignment of enums is now correctly allowed in C11.
 
 ** Types as objects
 Previously declared types are now checked to ensure they're not being used as
-objects
+objects:
 
     cdecl> struct S
     cdecl> explain int S                // error (now)
